--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 	@font-face{
 		font-family:'vazir';
-		src:url('./Vazir.ttf');
+		src:url('./assets/fonts/Vazir.ttf');
 	}
 	*{
 		margin:0px;
@@ -50,7 +50,7 @@
 	padding:15px;
 	box-sizing:border-box;
 	background-color:white;
-	background-image:url('./pattern1.png'),url('./logo-mark.png'),url('./pattern2.png');
+	background-image:url('../assets/images/pattern1.png'),url('../assets/images/logo-mark.png'),url('../assets/images/pattern2.png');
 	background-size:10px 6px,80% auto,10px 6px;
 	background-repeat:repeat-x,no-repeat,repeat-x;
 	background-position:top left,center center,bottom left;
@@ -77,7 +77,7 @@
 	}
 	#now-pay{
 		padding-left:25px;
-		background-image:url('./time.png');
+		background-image:url('./assets/images/time.png');
 		background-size:15px auto;
 		background-repeat:no-repeat;
 		background-position:center left;
